# plutus-pioneer-program

./: .gitbook.yaml  .gitignore  .gitmodules  .readthedocs.yaml  LECTURE_NOTES.md  README.adoc  README.md  SETUP-LINUX.md  SUMMARY.adoc  SUMMARY.md  compose-dev.yml  scratch.txt  week9.md
cardano-private-testnet-setup/script-example/project/: cabal.project  hie.yaml  script-example.cabal
code/: cabal.project  ppp.cabal
code/.devcontainer/: Dockerfile
code/Utilities/: Utilities.cabal
code/Utilities/src/: Utilities.hs  Utils.hs
code/Week01/: README.md
code/Week02/: FortyTwo.hs  README.md  Week02.cabal
code/Week02/assets/: burn.plutus  customtypes.plutus  fortytwo.plutus  fortytwotyped.plutus  gift-tx.body  gift.addr  protocol-parameters.json  tx.signed  user.addr  user.skey  user.vkey
code/Week02/homework/: Homework1.hs  Homework2.hs
code/Week02/lecture/: Burn.hs  CustomTypes.hs  FortyTwo.hs  FortyTwoTyped.hs  Gift.hs  Utils.hs
code/Week02/scripts/: build-sign-submit-tx.sh  collect-gift.sh  create-wallet.sh  get-gift-utxos.sh  get-protocol-params.sh  get-user-utxos.sh  make-gift.sh
code/Week02/tests/: THomework.hs  THomework1.hs
code/Week03/: Week03.cabal
code/Week03/assets/: vesting.plutus
code/Week03/homework/: Homework.hs  Homework1.hs  Homework2.hs
code/Week03/lecture/: ParameterizedVesting.hs  Vesting.hs
code/Week03/lucid/: package-lock.json  package.json  webpack.config.js
code/Week03/lucid-ref-script/: webpack.config.js
code/Week03/tests/: THomework.hs
code/Week04/: Week04.cabal
code/Week04/assets/: mistery1.plutus
code/Week04/homework/: Homework1.hs  Homework2.hs
code/Week04/lecture/: lucid-vesting.ts
code/Week04/tests/: THomework.hs
code/Week05/: Week05.cabal
code/Week05/assets/: free.plutus  nft-55387196222ded4fe8ccc8f8bc91a33517b6525dd7aeabd3710bfb4149fb395d#1-5050502d4e4654.plutus  nft.plutus  signed-5039d01f7366382d99588999d295585254a92c1cbe8830f0a41ea991.plutus  signed.plutus
code/Week05/homework/: Homework1.hs  Homework2-ver2.hs  Homework2.hs  lucid-h1.ts  lucid-h2.ts  secret.ts
code/Week05/lecture/: Free.hs  NFT.hs  Signed.hs  lucid-free.ts  lucid-nft.ts  lucid-signed.ts
code/Week05/tests/: THomework.hs
code/Week06/: README.md  Week06.cabal
code/Week06/assets/: NegativeR.plutus  NegativeRTimed.plutus
code/Week06/homework/: TExploitableSwap.hs  TSwap.hs
code/Week06/lecture/: ExploitableSwap.hs  Mint.hs  NegativeR.hs  NegativeRTimed.hs  PatchedSwap.hs  State.hs  Swap.hs
code/Week06/lecture_tests/: NegativeR.ts  NegativeRTimed.ts  PSM.hs  PTNegativeR.hs  PTNegativeRTimed.hs  UTNegativeR.hs  UTNegativeRTimed.hs
code/Week07/: Week07.cabal  cabal.project
code/Week07/lecture/: marlowe.hs
code/Week08/: Week08.cabal
code/Week08/assets/: unit.json
code/Week08/homework/: Homework.hs
code/Week08/lecture/: Staking.hs
code/Week08/scripts/: query-stake-address-info-user1-script.sh  query-stake-address-info-user1.sh  query-stake-pools.sh  query-tip.sh  query-utxo-user1-script.sh  query-utxo-user1.sh  query-utxo-user2.sh  register-and-delegate.sh  withdraw-user1-script.sh  withdraw-user1.sh
code/Week09/: README.md  Week09.cabal
code/Week09/assets/: collateral.plutus  minting.plutus  minting1.plutus  oracle.plutus  stablecoin.plutus
code/Week09/tests/: UnitTesting.hs
code/english-auction/: english-auction.cabal
code/english-auction/src/: EnglishAuction.hs
code/nix/: sources.json
code/tests/Week02/: THomework.hs
code/week01/: .gitignore  README.md  cabal.project  hie.yaml  plutus-pioneer-program-week01.cabal
code/week02/: README.md  cabal.project  hie.yaml  notes.md  plutus-pioneer-program-week02.cabal
code/week02/.devcontainer/: devcontainer.json
code/week03/: Dockerfile  README.md  cabal.project  hie.yaml  notes.md  plutus-pioneer-program-week03.cabal  start-node-testnet.sh
code/week03/testnet/: .gitignore  give.sh  grab.sh  send.sh
code/week04/: 1  README.md  cabal.project  hie.yaml  nodes.md  notes.md  plutus-pioneer-program-week04.cabal
code/week04/.devcontainer/: devcontainer.json
code/week04/app/: hello.hs
code/week05/: README.md  cabal.project  hie.yaml  plutus-pioneer-program-week05.cabal
code/week06/: .gitignore  README.md  cabal.project  create-wallet.sh  env.sh  get-address.sh  hie.yaml  load-wallet.sh  migrate-pab.sh  mint-token-cli.sh  mint-token-curl.sh  mint-token-haskell.sh  mint-token.sh  monitor.sh  notes.md  plutus-pioneer-program-week06.cabal  policy.plutus  query-chain-index.sh  query-key1.sh  query-key2.sh  query-wallet.sh  run-oracle.sh  start-testnet-chain-index.sh  start-testnet-node.sh  start-testnet-pab.sh  start-testnet-wallet.sh
code/week06/app/: mint-token.hs  monitor.hs  oracle-client.hs  oracle-pab.hs  oracle.hs  payment-key-hash.hs  stake-key-hash.hs  swap-client.hs  token-name.hs  token-pab.hs  token-policy.hs
code/week06/frontend-app/: Dockerfile  go.mod  main.go
code/week06/testnet/: chain-index-config.json  oracleParams.json  pab-config.yml  policy.plutus  query-key1.sh  query-key2.sh  send.sh  testTokenReturnAddress  testnet-alonzo-genesis.json  testnet-config.json  testnet-magic  token-activation.json  unit.json
code/week07/: README.md  cabal.project  hie.yaml  plutus-pioneer-program-week07.cabal
code/week08/: .gitignore  cabal.project  hie.yaml  plutus-pioneer-program-week08.cabal
code/week08/test/: Spec.hs
code/week09/: cabal.project  hie.yaml  plutus-pioneer-program-week09.cabal
code/week09/app/: homework.hs  solution.hs
code/week10/: .gitignore  add.sh  cabal.project  close.sh  create.sh  funds.sh  hie.yaml  logs.sh  plutus-pioneer-program-week10.cabal  pools.sh  remove.sh  status.sh  swap.sh
code/week10/app/: Uniswap.hs  uniswap-client.hs  uniswap-pab.hs  write-stake-validator.hs
code/week10/scripts/: make-user.sh  make-user2.sh  query-pool-params.sh  query-stake-address-info-user1-script.sh  query-stake-address-info-user1.sh  query-stake-address-info.sh  query-stake-pools.sh  query-tip.sh  query-utxo-user1-script.sh  query-utxo-user1.sh  query-utxo-user2.sh  query-utxo.sh  register-and-delegate.sh  withdraw.sh  (+3 more)
(+11294 files in other folders)
