cabal-version:      3.4
name:               plutus-pioneer-program
version:            0.1.0.0
author:             IOG's education team
maintainer:         education@iohk.io
license:            Apache-2.0
build-type:         Simple


flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common common-all
    build-depends:    base ^>=4.14.3.0
                    , aeson
                    , bytestring
                    , containers
                    , cardano-api
                    , data-default
                    --, plutus-ledger
                    , plutus-ledger-api
                    --, plutus-ledger-constraints
                    --, plutus-script-utils
                    , plutus-tx-plugin
                    , plutus-tx
                    , text
                    , serialise

    default-language: Haskell2010

-- TODO: should we put all extensions in the file to make it explicit we're using them?
    --default-extensions: NoImplicitPrelude
                        --OverloadedStrings
                        --TypeApplications
                        --ImportQualifiedPost
                        --BangPatterns
                        --LambdaCase
                        --ScopedTypeVariables


    ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas
                 -fno-omit-interface-pragmas -fno-strictness 
                 -fno-spec-constr -fno-specialise

    -- See Plutus Tx readme
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors


-----------------------------------------------------------------------------------------
-------------------------------------- WEEK 01 ------------------------------------------

-- TODO

-----------------------------------------------------------------------------------------
-------------------------------------- WEEK 02 ------------------------------------------

library week02-gift
    import:            common-all
    hs-source-dirs:    Week02
    exposed-modules:   Gift

library week02-homework1
    import:            common-all
    hs-source-dirs:    Week02
    exposed-modules:   Homework1

test-suite test-week02-homework1
    import:           common-all
    type:             exitcode-stdio-1.0
    build-depends:  , QuickCheck >= 2.14.2
                    , tasty >= 1.4.3
                    --, plutus-simple-model
                    , week02-homework1
    main-is:          THomework.hs
    hs-source-dirs:   tests/Week02
                    , Week02

-----------------------------------------------------------------------------------------
-------------------------------------- WEEK 03 ------------------------------------------

-- TODO: Keep going