cabal-version:      3.4
name:               utilities
version:            0.1.0.0
author:             IOG's education team
maintainer:         education@iohk.io
license:            Apache-2.0
build-type:         Simple

common common-all
    build-depends:    base ^>=4.14.3.0
                    , bytestring
                    , cardano-api
                    , plutus-ledger-api
                    , plutus-tx
                    , text
                    , serialise
    default-language: Haskell2010
    ghc-options: -Wall -Wunused-packages

common common-all-tests
    import:           common-all
    build-depends:    QuickCheck
                    , tasty
                    , plutus-simple-model

library
    hs-source-dirs:   src
    exposed-modules:  Utils
    build-depends:    base ^>=4.14.3.0
                    , aeson
                    , bytestring
                    , containers
                    , cardano-api
                    , data-default
                    , plutus-ledger-api
                    , plutus-tx-plugin
                    , plutus-tx
                    , text
                    , serialise
    default-language: Haskell2010
    ghc-options:      -Wall -Wunused-packages
