cabal-version:      3.4
name:               utilities
version:            0.1.0.0
author:             IOG's education team
maintainer:         education@iohk.io
license:            Apache-2.0
build-type:         Simple

library
    hs-source-dirs:   src
    exposed-modules:  Utilities
    other-modules:    Utilities.PlutusTx
                      Utilities.Serialise
    build-depends:    base ^>=4.14.3.0
                    , bytestring
                    , cardano-api
                    , plutus-ledger-api
                    , plutus-tx
                    , serialise
    default-language: Haskell2010
    ghc-options:      -Wall -Wunused-packages
