cabal-version:      3.4
name:               utilities
version:            0.1.0.0
author:             IOG's education team
maintainer:         education@iohk.io
license:            Apache-2.0
build-type:         Simple

library
    hs-source-dirs:   src
    exposed-modules:  Utilities
    other-modules:    Utilities.Conversions
                      Utilities.PlutusTx
                      Utilities.Serialise
    build-depends:    aeson
                    , base ^>=4.14.3.0
                    , base16-bytestring
                    , bytestring
                    , cardano-api
                    , cardano-crypto-class
                    , cardano-ledger-core
                    , plutus-ledger-api
                    , plutus-tx
                    , serialise
                    , text
                    , time
    default-language: Haskell2010
    ghc-options:      -Wall -Wunused-packages
