cabal-version:      3.4
name:               week02
version:            0.1.0.0
author:             IOG's education team
maintainer:         education@iohk.io
license:            Apache-2.0
build-type:         Simple

common common-all
    build-depends:    base ^>=4.14.3.0
                    , aeson
                    , bytestring
                    , containers
                    , cardano-api
                    , data-default
                    --, plutus-ledger
                    , plutus-ledger-api
                    --, plutus-ledger-constraints
                    --, plutus-script-utils
                    , plutus-tx-plugin
                    , plutus-tx
                    , text
                    , serialise
                    , utilities

    default-language: Haskell2010

-- TODO: should we put all extensions in the file to make it explicit we're using them?
    --default-extensions: NoImplicitPrelude
                        --OverloadedStrings
                        --TypeApplications
                        --ImportQualifiedPost
                        --BangPatterns
                        --LambdaCase
                        --ScopedTypeVariables


    ghc-options: -Wall -fobject-code -fno-ignore-interface-pragmas
                 -fno-omit-interface-pragmas -fno-strictness 
                 -fno-spec-constr -fno-specialise -fexpose-all-unfoldings
                 -fplugin-opt PlutusTx.Plugin:defer-errors

common common-all-tests
    import:           common-all
    build-depends:    QuickCheck
                    , tasty
                    , plutus-simple-model

library
    import:             common-all
    hs-source-dirs:     lecture
                      , homework
    exposed-modules:    Gift
                      , Burn
                      , FortyTwo
                      , FortyTwoTyped
                      , CustomTypes
                      , Homework1
                      , Homework2

test-suite week02-homework
    import:             common-all-tests
    type:               exitcode-stdio-1.0
    main-is:            THomework.hs
    hs-source-dirs:     tests
    build-depends:      week02
