cabal-version:      3.4
name:               week07
version:            0.1.0.0
author:             IOG's education team
maintainer:         education@iohk.io
license:            Apache-2.0
build-type:         Simple

executable marlowe
    main-is:            marlowe.hs
    hs-source-dirs:     lecture
    build-depends:      base ^>=4.14.3.0
                      , marlowe-cardano
    default-language:   Haskell2010
    ghc-options:        -Wall