Cabal-Version:      2.4
Name:               plutus-pioneer-program-week02
Version:            0.1.0.0
Author:              Lars Bruenjes
Maintainer:          brunjlar@gmail.com
Build-Type:          Simple
Copyright:           © 2021 Lars Bruenjes
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     Week02.Burn
                     , Week02.FortyTwo
                     , Week02.Homework1
                     , Week02.Homework2
                     , Week02.Gift
                     , Week02.IsData
                     , Week02.Solution1
                     , Week02.Solution2
                     , Week02.Typed
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-tx-plugin
                     , plutus-tx
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
