Cabal-Version:      2.4
Name:               plutus-pioneer-program-week05
Version:            0.1.0.0
Author:              Lars Bruenjes
Maintainer:          brunjlar@gmail.com
Build-Type:          Simple
Copyright:           © 2021 Lars Bruenjes
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     Week05.Free
                     , Week05.Homework1
                     , Week05.Homework2
                     , Week05.NFT
                     , Week05.Signed
                     , Week05.Solution1
                     , Week05.Solution2
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , freer-extras
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise
