Cabal-Version:      2.4
Name:               plutus-pioneer-program-week06
Version:            0.1.0.0
Author:              Lars Bruenjes
Maintainer:          brunjlar@gmail.com
Build-Type:          Simple
Copyright:           © 2021 Lars Bruenjes
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     Week06.Core
                       Week06.Deploy
                       Week06.Funds
                       Week06.PAB
                       Week06.Swap
                       Week06.Test
                       Week06.Token
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , bytestring
                     , cardano-api
                     , cardano-crypto-class
                     , cardano-ledger-core
                     , cardano-ledger-shelley
                     , cardano-wallet-core
                     , containers
                     , data-default
                     , freer-extras
                     , openapi3
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-ledger-constraints
                     , plutus-pab
                     , plutus-tx-plugin
                     , plutus-tx
                     , plutus-use-cases
                     , prettyprinter
                     , serialise
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable oracle-pab
  main-is: oracle-pab.hs
  hs-source-dirs:      app
  ghc-options:         -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:       aeson
                     , base ^>= 4.14.1.0
                     , data-default
                     , freer-extras
                     , freer-simple
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-constraints
                     , plutus-pab
                     , plutus-pioneer-program-week06
                     , plutus-use-cases
                     , text

executable mint-token
  main-is: mint-token.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base ^>= 4.14.1.0
                     , plutus-contract
                     , plutus-pab
                     , plutus-pioneer-program-week06
                     , req ^>= 3.9.0

executable oracle-client
  main-is: oracle-client.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       base ^>= 4.14.1.0
                     , bytestring
                     , regex-tdfa ^>= 1.3.1.0
                     , req ^>= 3.9.0
                     , text
                     , uuid

executable swap-client
  main-is: swap-client.hs
  hs-source-dirs:      app
  ghc-options:         -Wall
  build-depends:       aeson
                     , base ^>= 4.14.1.0
                     , plutus-ledger
                     , plutus-pab
                     , plutus-pioneer-program-week06
                     , req ^>= 3.9.0
                     , text
                     , uuid
