Cabal-Version:      2.4
Name:               plutus-pioneer-program-week08
Version:            0.1.0.0
Author:              Lars Bruenjes
Maintainer:          brunjlar@gmail.com
Build-Type:          Simple
Copyright:           © 2021 Lars Bruenjes
License:             Apache-2.0
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     Week08.Lens
                     , Week08.QuickCheck
                     , Week08.TokenSale
                     , Week08.TokenSaleWithClose
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , lens
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , plutus-use-cases
                     , prettyprinter
                     , QuickCheck
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

test-suite plutus-pioneer-program-week08-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  other-modules:       Spec.Model
                     , Spec.ModelWithClose
                     , Spec.Trace
                     , Spec.TraceWithClose
  default-language: Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  build-depends:       base ^>=4.14.1.0
                     , containers
                     , data-default
                     , freer-extras
                     , lens
                     , plutus-contract
                     , plutus-ledger
                     , plutus-pioneer-program-week08
                     , plutus-tx
                     , QuickCheck
                     , tasty
                     , tasty-quickcheck
                     , text
  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin -any
